--- a/force-app/main/default/pages/BudgetApp.page
+++ b/force-app/main/default/pages/BudgetApp.page
@@ -24,6 +24,8 @@
     - highlight last expense
     - fix the way the loader is being hidden... cant rely on timeout lol
 
+    - Add ability to reorder categories
+
   -->
 
 
@@ -36,17 +38,6 @@
       <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
       <!-- Include Bootstrap -->
-      
-      <!--
-      
-             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js">
-      </script>
-      <link rel="stylesheet" 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-      </link>
-
-      -->
-      
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" 
         rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
